gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_completions_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy completions
expression: help
---
Generate shell completions

Usage: gpy completions <SHELL>

Arguments:
  <SHELL>  Shell to generate completions for [possible values: bash, elvish, fish, powershell, zsh]

Options:
  -h, --help  Print help
