gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_debug_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy debug
expression: help
---
Debugging tools

Usage: gpy debug <COMMAND>

Commands:
  prompt  Time the agent's ping, git and language round trips
  paths   Dump every path GPY resolves from the environment
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
