gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_disable_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy disable
expression: help
---
Disable a prompt segment

Usage: gpy disable <SEGMENT>

Arguments:
  <SEGMENT>  Segment name (built-in or discovered plugin segment)

Options:
  -h, --help  Print help
