gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_doctor_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy doctor
expression: help
---
Run health checks and diagnostics

Usage: gpy doctor

Options:
  -h, --help  Print help
