gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_lang_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy lang
expression: help
---
Language detection configuration

Usage: gpy lang <COMMAND>

Commands:
  versions  Toggle version display (on/off)
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
